tests/baselines/reference/inheritedMembersAndIndexSignaturesFromDifferentBases.errors.txt
tests/cases/compiler/inheritedMembersAndIndexSignaturesFromDifferentBases.ts(17,11): error TS2411: Property 'm' of type '{}' is not assignable to string index type '{ a: 任意; }'.
tests/cases/compiler/inheritedMembersAndIndexSignaturesFromDifferentBases.ts(23,11): error TS2411: Property '0' of type '{}' is not assignable to string index type '{ a: 任意; }'.
tests/cases/compiler/inheritedMembersAndIndexSignaturesFromDifferentBases.ts(23,11): error TS2412: Property '0' of type '{}' is not assignable to numeric index type '{ a: 任意; b: 任意; }'.
tests/cases/compiler/inheritedMembersAndIndexSignaturesFromDifferentBases.ts(25,11): error TS2411: Property '0' of type '{}' is not assignable to string index type '{ a: 任意; }'.
tests/cases/compiler/inheritedMembersAndIndexSignaturesFromDifferentBases.ts(25,11): error TS2411: Property 'm' of type '{}' is not assignable to string index type '{ a: 任意; }'.
tests/cases/compiler/inheritedMembersAndIndexSignaturesFromDifferentBases.ts(25,11): error TS2412: Property '0' of type '{}' is not assignable to numeric index type '{ a: 任意; b: 任意; }'.


==== tests/cases/compiler/inheritedMembersAndIndexSignaturesFromDifferentBases.ts (6 errors) ====
    // indexer in B is a subtype of indexer in A
    interface A {
        [s: string]: {
            a;
        };
    }
    interface B {
        [s: number]: {
            a;
            b;
        };
    }
    interface C {
        m: {};
    }
    
    interface D extends A, B, C { } // error because m is not a subtype of {a;}
              ~
!!! error TS2411: Property 'm' of type '{}' is not assignable to string index type '{ a: 任意; }'.
    
    interface E {
        0: {};
    }
    
    interface F extends A, B, E { } // error because 0 is not a subtype of {a; b;}
              ~
!!! error TS2411: Property '0' of type '{}' is not assignable to string index type '{ a: 任意; }'.
              ~
!!! error TS2412: Property '0' of type '{}' is not assignable to numeric index type '{ a: 任意; b: 任意; }'.
    
    interface G extends A, B, C, E { } // should only report one error
              ~
!!! error TS2411: Property '0' of type '{}' is not assignable to string index type '{ a: 任意; }'.
              ~
!!! error TS2411: Property 'm' of type '{}' is not assignable to string index type '{ a: 任意; }'.
              ~
!!! error TS2412: Property '0' of type '{}' is not assignable to numeric index type '{ a: 任意; b: 任意; }'.
    
    interface H extends A, F { } // Should report no error at all because error is internal to F